# fusi-bids-pydantic

./: .gitmodules  .pre-commit-config.yaml  Makefile  README.md  fusi_bids_pydantic.py  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: lint.yml  release.yml  test.yml
tests/: test_bids_examples.py  test_models.py
